# tinytiger

./: README.org  pyproject.toml
src/tinytiger/: __init__.py  classifier.py  cli.py  model.py
tests/: test_classifier.py
